--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-            <meta name="viewport" content="width=device-width">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
             <link rel="icon" href="./static/css/favicon.ico" />
         {% if title == 'Home' %}
             <title>Welcome to DHDKey!</title>
@@ -12,8 +12,8 @@
         {% endif %}
         
         <!--Bootstrap-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
         
         <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/> -->
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
@@ -26,7 +26,7 @@
     </head>
     <body class="d-flex flex-column">
                 <div style="min-height: 100vh">
-                    <div class="head fixed-top bg-white" style="z-index: 0;">
+                    <div class="head fixed-top bg-white" style="z-index: 1;">
                             <nav class="navbar navbar-expand navbar-light shadow-sm px-sm-5 px-0">
                                     <a class="navbar-brand" style="font-size: 1.65rem !important; font-weight:200 !important;" href="{{ url_for('index') }}">DHDKey!</a>
                                     {% if title != "Confirmation" %}
@@ -60,7 +60,7 @@
                             </div>
                     </div>
                 </div>
-    <footer class="footer bg-dark text-light position-sticky" style="z-index: 2;">
+    <footer class="footer bg-dark text-light position-sticky" style="z-index: 3;">
         <div class="container">
             <div class="row d-flex justify-content-left flex-wrap my-1">
                 <div class="col-6 d-flex flex-column align-items-start justify-content-around mx-0 my-1" style="min-width: fit-content;">
@@ -81,7 +81,7 @@
             </div>
          </footer>
 
-         <footer class="footer bg-secondary text-white py-1 position-sticky" style="z-index: 2;">
+         <footer class="footer bg-secondary text-white py-1 position-sticky" style="z-index: 3;">
                 <div class="container">
                     <div class="d-inline-flex justify-content-between w-100 flex-wrap" style="min-width: fit-content;">
                             <div class="my-1" style="min-width: fit-content;">
