--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -2,69 +2,74 @@
 
 {% block content %}
 
-    <div class= "col-md-8 col-xl-5 text-center mx-auto" style="margin-top: 35px"> 
-        <h2 style="margin-bottom: 30px">Upload New Project!</h2>
+    <div class= "col-md-10 col-xl-7 mx-auto mt-5 mb-4 card" style="z-index: 0;"> 
+        <h2 class="mb-3 mt-3">Upload New Project!</h2>
         <form id="projform" autocomplete="off" action="{{ url_for('upload') }}" method="POST">
             
             <!--TITLE-->
-            <div class="form-group">
-                <label for="Title">Project Title</label>
-                <input type="text" class="form-control" id="Title" name="Title" required="true" placeholder="Enter Project&#39;s Title">
+            <div class="form-group mb-3">
+                    <label for="Title">Project title</label>
+                    <input type="text" class="form-control" id="Title" name="Title" required="true" placeholder="Enter your project&#39;s title">
               </div>
 
 
             <!--REPOSITORY LINK-->
-            <div class="form-group">
-                <label for="Repository">Project Github<!-- DH.arc--> Repository</label>
-                <input type="url" class="form-control" id="Repository" name="Repository" placeholder="www.example.com" required="true">
+            <div class="form-group mb-3">
+                <label for="Repository">Project Github<!-- DH.arc--> repository</label>
+                <input type="url" class="form-control" id="Repository" name="Repository" placeholder="www.example.com">
               </div>
             
             <!--WEBSITE LINK-->
-            <div class="form-group">
-                    <label for="Homepage">Project Website (optional)</label>
+            <div class="form-group mb-3">
+                    <label for="Homepage">Project website (optional)</label>
                     <input type="url" class="form-control" id="Homepage" name="Homepage" placeholder="www.example.com">
                   </div>
 
             
             <!--AUTHORS-->
-            <div class="card p-3 mb-3">
-                    <label>Authors</label>
-                <div id="author-container"> 
-                        <div class="form-group author-fields card bg-light p-3 author-item  text-left text-sm-center" id="item-0">
-                            <div class="row">
-                                <div class="col-12 authorname">
-                                    <div class="row mb-2">
-                                        <label for="Aut[0][Name]" class="col-sm-4 col-form-label">Author Name</label>
-                                        <div class="col-sm-8">
-                                                <input type="text" class="form-control" id="Aut[0][Name]"  name="Aut[0][Name]"  required="true" placeholder="Enter Author&#39;s Name">
-                                            </div>
-                                    </div>
-                                    <div class="row mb-2">
-                                            <label for="Aut[0][Surname]"  class="col-sm-4 col-form-label">Author Surname</label>
-                                            <div class="col-sm-8">
-                                                    <input type="text" class="form-control" id="Aut[0][Surname]"  name="Aut[0][Surname]"  required="true" placeholder="Enter Author&#39;s Surname">
-                                                </div>
-                                        </div>
-                                    <div class="row">
-                                            <label for="Aut[0][Mail]"  class="col-sm-4 col-form-label">UniboMail</label>
-                                            <div class="col-sm-8">
-                                                <input type="mail" class="form-control" id="Aut[0][Mail]" name="Aut[0][Mail]" pattern="^[a-zA-Z0-9_.+-]+@(?:(?:[a-zA-Z0-9-]+\.)?[a-zA-Z]+\.)?(unibo|studio.unibo)\.it$" placeholder="Enter Author&#39;s Unibo Mail" title="Only Unibo Mail accepted (@unibo.it or @studio.unibo.it)" required="true">
-                                            </div>
-                                        </div>
-                                </div>
-                                <div class="col-0 authordisable">
-                                    <button type="button" class="btn btn-danger btn-sm delete d-none" for="item-0">
+            <div class="mb-3">
+                    <label>List of authors</label>
+                <div id="author-container" class="card bg-light"> 
+                    <div class="card-body p-3 author-container-body">
+
+                        <div class="form-group author-fields card author-item text-left text-sm-center" id="item-0">
+                            <div class="card-header text-body-secondary bg-white d-flex flex-row justify-content-end">
+                                    <button type="button" class="btn btn-danger btn-sm delete disabled" for="item-0">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
+                                
+                            </div>
+                            <div class="card-body text-body-secondary bg-white p-3">
+                                <div class="row">
+                                    <div class="col-12 authorname">
+                                        <div class="mb-2 form-floating">
+                                            <input type="text" class="form-control" id="Aut[0][Name]"  name="Aut[0][Name]" required="true" placeholder="Enter Author&#39;s Name" >
+                                            <label for="Aut[0][Name]" class="col-sm-4 col-form-label">Author Name</label>
+                                        </div>
+                                        <div class="mb-2 form-floating">
+                                            <input type="text" class="form-control" id="Aut[0][Surname]"  name="Aut[0][Surname]"  required="true" placeholder="Enter Author&#39;s Surname">
+                                            <label for="Aut[0][Surname]"  class="col-sm-4 col-form-label">Author Surname</label>
+                                        </div>
+                                        <div class="form-floating">
+                                            <input type="mail" class="form-control" id="Aut[0][Mail]" name="Aut[0][Mail]" pattern="^[a-zA-Z0-9_.+-]+@(?:(?:[a-zA-Z0-9-]+\.)?[a-zA-Z]+\.)?(unibo|studio.unibo)\.it$" placeholder="Enter Author&#39;s Unibo Mail" title="Only Unibo Mail accepted (@unibo.it or @studio.unibo.it)" required="true">
+                                            <label for="Aut[0][Mail]"  class="col-sm-4 col-form-label">UniboMail</label>
+                                        </div>
+                                    </div>
+                                    
                                 </div>
                             </div>
+                            
                         </div>
+                    </div>
+                    <div class="card-footer text-body-secondary bg-light">
+                        <button id="add-more" name="add-more" type="button" class="btn btn-success">Add More</button>
+                        
+                    </div>
                 </div>
-                <button id="add-more" name="add-more" type="button" class="btn btn-success">Add More</button>
             </div>
 
             <!--YEAR-->
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label for="Year">Course Academic Year</label>
                 <select class="form-control" id="Year" name="Year" required="true">
                     <option value="" selected>Choose...</option>
@@ -72,7 +77,7 @@
               </div>
 
             <!--COURSE-->
-            <div class="form-group">
+            <div class="form-group mb-3">
             <label for="Course">Course Title</label>
             <small>(Select Course Academic Year first)</small>
             <select class="form-control" id="Course" name="Course" disabled required="true">
@@ -82,13 +87,13 @@
             
 
             <!--DESCRIPTION-->
-            <div class="form-group">
+            <div class="form-group mb-3">
             <label for="Description">Project Description (<span id="charcount">500</span> characters left)</label>
             <textarea class="form-control" id="Description" name="Description" maxlength = "500" rows="5" required="true"></textarea>
             </div>
 
             <!--RESPONSIBLE MAIL-->
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label class="mb-0" for="Responsible">Contact Mail</label>
                 <!--<small id="ResponsibleHelp" class="form-text text-muted mb-1 mt-0">Email address to which data confirmation form will be sent (24h to confirm)</small>-->
                 <input type="mail" class="form-control" id="Responsible" name="Responsible" pattern="^[a-zA-Z0-9_.+-]+@(?:(?:[a-zA-Z0-9-]+\.)?[a-zA-Z]+\.)?(unibo|studio.unibo)\.it$" placeholder="Enter Unibo Mail" title="Only Unibo Mail accepted (@unibo.it or @studio.unibo.it)" required="true">
@@ -128,43 +133,35 @@ $(document).ready(function () {
     $("#add-more").click(function(e){
         e.preventDefault();
         next = next + 1;
-        $(".delete").removeClass("d-none")
-        $(".authordisable").addClass("col-2 pr-0")
-        $(".authordisable").removeClass("col-0")
-        $(".authorname").addClass("col-10 pr-0")
-        $(".authorname").removeClass("col-12")
-        var template = '<div class="form-group author-fields card bg-light p-3 author-item  text-left text-sm-center" id="item-' + next + '">\
-                            <div class="row">\
-                                <div class="col-10 pr-0 authorname">\
-                                    <div class="row mb-2">\
-                                        <label for="Aut[' + next + '][Name]" class="col-sm-4 col-form-label">Author Name</label>\
-                                        <div class="col-sm-8">\
-                                                <input type="text" class="form-control" id="Aut[' + next + '][Name]"  name="Aut[' + next + '][Name]"  required="true" placeholder="Enter Author&#39;s Name">\
-                                            </div>\
-                                    </div>\
-                                    <div class="row mb-2">\
+        $(".delete").removeClass("disabled")
+        var template = '<div class="form-group author-fields card author-item mt-3 text-left text-sm-center" id="item-' + next + '">\
+                            <div class="card-header text-body-secondary bg-white d-flex flex-row justify-content-end">\
+                                <button type="button" class="btn btn-danger btn-sm delete" for="item-' + next + '">\
+                                    <span aria-hidden="true">&times;</span>\
+                                </button>\
+                            </div>\
+                            <div class="card-body text-body-secondary bg-white p-3">\
+                                <div class="row">\
+                                    <div class="col-12 pr-0 authorname">\
+                                        <div class="mb-2 form-floating">\
+                                            <input type="text" class="form-control" id="Aut[' + next + '][Name]"  name="Aut[' + next + '][Name]"  required="true" placeholder="Enter Author&#39;s Name">\
+                                            <label for="Aut[' + next + '][Name]" class="col-sm-4 col-form-label">Author Name</label>\
+                                        </div>\
+                                        <div class="mb-2 form-floating">\
+                                            <input type="text" class="form-control" id="Aut[' + next + '][Surname]"  name="Aut[' + next + '][Surname]"  required="true" placeholder="Enter Author&#39;s Surname">\
                                             <label for="Aut[' + next + '][Surname]"  class="col-sm-4 col-form-label">Author Surname</label>\
-                                            <div class="col-sm-8">\
-                                                    <input type="text" class="form-control" id="Aut[' + next + '][Surname]"  name="Aut[' + next + '][Surname]"  required="true" placeholder="Enter Author&#39;s Surname">\
-                                                </div>\
                                         </div>\
-                                    <div class="row">\
+                                        <div class="form-floating">\
+                                            <input type="mail" class="form-control" id="Aut[' + next + '][Mail]" name="Aut[' + next + '][Mail]" pattern="^[a-zA-Z0-9_.+-]+@(?:(?:[a-zA-Z0-9-]+\.)?[a-zA-Z]+\.)?(unibo|studio.unibo)\.it$" placeholder="Enter Author&#39;s Unibo Mail" title="Only Unibo Mail accepted (@unibo.it or @studio.unibo.it)" required="true">\
                                             <label for="Aut[' + next + '][Mail]"  class="col-sm-4 col-form-label">UniboMail</label>\
-                                            <div class="col-sm-8">\
-                                                <input type="mail" class="form-control" id="Aut[' + next + '][Mail]" name="Aut[' + next + '][Mail]" pattern="^[a-zA-Z0-9_.+-]+@(?:(?:[a-zA-Z0-9-]+\.)?[a-zA-Z]+\.)?(unibo|studio.unibo)\.it$" placeholder="Enter Author&#39;s Unibo Mail" title="Only Unibo Mail accepted (@unibo.it or @studio.unibo.it)" required="true">\
-                                            </div>\
                                         </div>\
-                                </div>\
-                                <div class="col-2 pr-0 authordisable">\
-                                    <button type="button" class="btn btn-danger btn-sm delete" for="item-' + next + '">\
-                                        <span aria-hidden="true">&times;</span>\
-                                    </button>\
+                                    </div>\
                                 </div>\
                             </div>\
                         </div>'
         
 
-        $('#author-container').append(template);
+        $('#author-container .author-container-body').append(template);
         len = $('.author-item').length;            
 
         $(".delete").click(function(){
@@ -172,10 +169,8 @@ $(document).ready(function () {
             $('#'+ target).remove()
             len = $('.author-item').length;
             if (len === 1){
-                $(".delete").addClass("d-none")
-                $(".authordisable").removeClass("col-2 pr-0")
-                $(".authordisable").addClass("col-0")
-                $(".authorname").removeClass("col-10 pr-0")
+                $(".delete").addClass("disabled")
+                $(".authorname").removeClass("col-11 pr-0")
                 $(".authorname").addClass("col-12")
             }
         });
@@ -207,7 +202,6 @@ function cut(str){
         str = str.substring(0, 55) + "..."
     }
     return str
-
 
 }
 </script>
