info page updates

--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <div class= "col-md-10 col-xl-7 mx-auto mt-5 mb-4 card" style="z-index: 0;"> 
-        <h2 class="mb-4 mt-4">Upload New Project!</h2>
+        <h2 class="mb-4 mt-4 display-6">Upload your project!</h2>
         <form id="projform" autocomplete="off" action="{{ url_for('upload') }}" method="POST">
             
             <!--TITLE-->
