--- a/app/templates/documents/info.html
+++ b/app/templates/documents/info.html
@@ -2,63 +2,91 @@
 
 {% block content %}
 
-<div class="container text-center" style="margin-top: 35px">
-    <h2 class="mb-5">DHDKey! Info</h2>
+<div class= "col-11 col-md-10 col-xl-8 mx-auto mt-5 mb-4" style="z-index: 0;"> 
 
-    <div class="mb-4">
-            <p>DHDKey is part of <a href="https://centri.unibo.it/dharc/en" target="_blank">/DH.Arc</a> research activity</p>
-    </div>
-    <div class="mb-4">
-            <p><span class="text-secondary">Created by</span><br>
-            <a href="{{ url_for('projects', id='fabio_mariani6') }}">Fabio Mariani</a></p>
-    </div>
-    <div class="mb-4">
-            <span class="text-secondary"span>Supervised by</span>
-            <p><a href="https://www.unibo.it/sitoweb/silvio.peroni" target="_blank">Silvio Peroni</a> and <a href="https://www.unibo.it/sitoweb/francesca.tomasi" target="_blank">Francesca Tomasi</a></p>
-    </div>
-    <div class="mb-4">
-            <span class="text-secondary">Date</span>
-            <p>2020</p>
-    </div>
-    <div class="mb-4">
-            <p>
-            <span class="text-secondary">Website License</span>
-            <br>
-                <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" />
-         <br>       
-        Creative Commons Attribution 4.0 International License</a>.
+    <h1 class="mb-4  display-6">DHDKey! Info</h1>
+
+
+    <div class="row mb-3">
+        <h5 class="col-12 col-sm-3 mb-1">About us</h5>
+        <div class="col-12 col-sm-9">
+                <p>
+                        DHDKey! (Digital Humanitites and Digital Knowledge Educational Yearbook)
+                         is an online tool designed to collect and publish all the projects developed by the students of the Digital Humanitites
+                           and Digital Knowledge (DHDK) Master's course at the University of Bologna.
+                            
                 </p>
-    </div>
-    <div class="mb-4">
-        <p>
-        <span class="text-secondary">Projects Data and Metadata License</span>
-        <br>
-            <a rel="license" target="_blank" href="http://creativecommons.org/licenses/zero/1.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/zero/1.0/88x31.png" />
-     <br>       
-    Creative Commons Zero 1.0 International License</a>.
-            </p>
-    </div>
-    <div class="mb-4">
-            <p><span class="text-secondary">Github Repository</span>
-            <br>
-                <a rel="license" target="_blank" href="https://github.com/dharc-org/dhdkey"><i class="fab fa-sm fa-github"></i>
-                        https://github.com/dharc-org/dhdkey</a>
+
+                <p>
+                        The goal of DHDKey! is to organize all the DHDK students' projects in a historical collection and to provide all students of the course with their own academic portfolio.
                 </p>
+
+                <p> DHDKey! is developed and managed by the community of DHDK students as a part of <a href="https://centri.unibo.it/dharc/en" target="_blank">/DH.Arc</a> research activity</p>
+
+        </div>
     </div>
-    <div class="mb-4">
-            <span class="text-secondary">Contacts</span>
-            <br>
-            <span>
-                <a target="_blank" href="mailto:dharc@live.unibo.it"><i class="far fa-envelope"></i>
-                dharc@live.unibo.it</a>
-                <br>
-                <span><i class="fas fa-map-marker-alt"></i> Department of Classical Philology and Italian Studies (FICLIT), via Zamboni 32, 40126, Bologna</span>
-            </span>
+
+    <div class="row mb-4">
+        <h5 class="col-12 col-sm-3 mb-1">Created by</h5>
+        <div class="col-12 col-sm-9 ">
+                <a href="{{ url_for('projects', id='fabio_mariani6') }}">Fabio Mariani</a>
+        </div>
     </div>
-    <div class="mb-4">
-        <span class="text-secondary">Cite as:</span>
-        <p>DHDKey!, curated by \DH.Arc, version 1.0, 2020</p>
-</div>
+
+    <div class="row mb-4">
+        <h5 class="col-12 col-sm-3 mb-1">Supervised by</h5>
+        <div class="col-12 col-sm-9 ">
+                <a href="https://www.unibo.it/sitoweb/silvio.peroni" target="_blank">Silvio Peroni</a> and <a href="https://www.unibo.it/sitoweb/francesca.tomasi" target="_blank">Francesca Tomasi</a>
+        </div>
+    </div>
+
+    <div class="row mb-4">
+        <h5 class="col-12 col-sm-3 mb-1">Release date</h5>
+        <div class="col-12 col-sm-9 ">
+                <p>2020-2023</p>
+        </div>
+    </div>
+    
+    <div class="row mb-4">
+        <h5 class="col-12 col-sm-3 mb-1">Website License</h5>
+        <div class="col-12 col-sm-9 d-flex flex-column gap-1">
+                <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>
+                <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
+        </div>
+    </div>
+    
+    <div class="row mb-4">
+        <h5 class="col-12 col-sm-3 mb-1">Projects Data and Metadata License</h5>
+        <div class="col-12 col-sm-9 d-flex flex-column gap-1">
+                <a href="http://creativecommons.org/licenses/zero/1.0/">Creative Commons Zero 1.0 International License</a>
+                <a rel="license" target="_blank" href="http://creativecommons.org/licenses/zero/1.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/zero/1.0/88x31.png" /></a>
+        </div>
+    </div>
+
+    <div class="row mb-4">
+        <h5 class="col-12 col-sm-3 mb-1">Cite as</h5>
+        <div class="col-12 col-sm-9 ">
+                <p>DHDKey!, curated by \DH.Arc, version 1.0, 2020</p>
+        </div>
+    </div>
+
+    <div class="row mb-4">
+        <h5 class="col-12 col-sm-3 mb-1">Contact us</h5>
+        <div class="col-12 col-sm-9">
+                <p><a target="_blank" href="mailto:dharc@live.unibo.it"><i class="far fa-envelope"></i>
+                        </a>
+                
+                        <a rel="license" target="_blank" href="https://github.com/dharc-org/dhdkey"><i class="fab fa-sm fa-github"></i>
+                                </a>
+                        
+                                <span><i class="fas fa-map-marker-alt"></i> Department of Classical Philology and Italian Studies (FICLIT), via Zamboni 32, 40126, Bologna</span>
+                </p>
+        </div>
+    </div>
+
+    
+    
+    
 </div>
 
 {% endblock %}
