--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -75,7 +75,7 @@
                       <div class="card shadow-sm">
                           <div class="card-body d-flex flex-column align-items-center">
                               <i class="far fa-question-circle fa-7x bg-white text-dark icon "></i>
-                              <a href="{{ url_for('info') }}" class="btn btn-outline-dark mt-3 text-nowrap">User guide</a>
+                              <a href="{{ url_for('info') }}" class="btn btn-outline-dark mt-3 text-nowrap">Useful info</a>
                           </div>
                       </div>
                   </div>
@@ -443,6 +443,10 @@
 
 
     </script>
+    <script>
+      // const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+      // const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+</script>
     <style>
       
      
