--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,7 +40,16 @@
                                             <a class="text-nowrap nav-link" href="{{ url_for('index') }}">Home</a>
                                         </li>
                                         <li class="nav-item {% if title == 'Projects' %}active{% endif %}">
-                                            <a class="text-nowrap nav-link" href="{{ url_for('projects') }}">Projects</a>
+                                            <a id="projects-link-with-tooltip" class="text-nowrap nav-link" href="{{ url_for('projects') }}"
+                                            data-bs-trigger="manual"
+                                            data-bs-toggle="tooltip" data-bs-custom-class="custom-tooltip" data-bs-html="true" 
+                                                data-bs-title="
+                                                <div class='d-flex flex-column gap-1'>
+                                                        <div>1/3</div>
+                                                        <div>Here you can find all the DHDKey projects</div>
+                                                </div>"
+                                                data-bs-placement="bottom"
+                                            >Projects</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="text-nowrap nav-link {% if title == 'Upload' %}active{% endif %}" href="{{ url_for('upload') }}">Upload</a>
@@ -51,6 +60,17 @@
                                     </ul>
                                     </div>
                                     {% endif %}
+
+                                    <div
+                                    data-bs-trigger="click"
+                                    data-bs-toggle="tooltip" data-bs-custom-class="custom-tooltip" data-bs-html="true" 
+                                        data-bs-title="
+                                        <div class='d-flex flex-column gap-1'>
+                                                <div><a  href='#' id='tooltip-trigger-1' class='text-white'>Need help?</a></div>
+                                                <div><a href='mailto:nikolai.gorbachev@studio.unibo.it' class='text-white'>Report a problem</a></div>
+                                        </div>"
+                                        data-bs-placement="bottom"
+                                        class="text-dark text-decoration-none"><i class="far fa-question-circle bg-white text-secondary icon fa-2x"></i></div>
                                     
                                 </nav>
                     </div>
@@ -143,12 +163,56 @@
                     document.cookie = "cookie_consent=true";
                     document.getElementById('cookie-consent-container').hidden = true;
                 })
+
+                
+
+                
+                
             </script>
+            
+
         {% endif %}
 
 
 </body>
 
+<script>
+    const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+    const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+
+
+    function showTooltipById() {
+        
+        var tooltip = new bootstrap.Tooltip($('#projects-link-with-tooltip'), {
+        popperConfig: function (defaultBsPopperConfig) {
+            // var newPopperConfig = {...}
+            // use defaultBsPopperConfig if needed...
+            // return newPopperConfig
+        }
+        })
+        tooltip.show()
+    
+}
+
+$("#tooltip-trigger-1").on('click', function() {
+  showTooltipById()
+});
+
+    $(document).ready(function() {
+
+    })
+    
+
+    
+
+
+</script>
+<style>
+    .custom-tooltip {
+        --bs-tooltip-bg: var(--bs-dark);
+        --bs-tooltip-color: var(--bs-white);
+    }
+</style>
 
 </html>
 
