--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -221,6 +221,10 @@ function cut(str){
 
 }
 </script>
+<script>
+    // const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+    // const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+</script>
 <script src='https://www.google.com/recaptcha/api.js'></script>
 
 
