--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -58,7 +58,7 @@
                                                 <div><a href='mailto:nikolai.gorbachev@studio.unibo.it' class='text-white'>Report a problem</a></div>
                                         </div>"
                                         data-bs-placement="bottom"
-                                        class="text-dark text-decoration-none"><i class="far fa-question-circle bg-white text-secondary icon fa-2x"></i></div>
+                                        class="text-dark text-decoration-none" style="cursor: pointer;"><i class="far fa-question-circle bg-white text-secondary icon fa-2x"></i></div>
                 
             </nav>
       </div>
